@@ -5,5 +5,6 @@ usr/share/kde4/apps/ksmserver/windowmanagers/sawfish.desktop
 usr/share/sawfish/sawfish.png
 usr/share/xsessions/sawfish.desktop
 usr/share/sawfish/*/lisp/sawfish/cfg/main.jlc
+usr/include/sawfish/
 usr/lib
 usr/bin
