@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@
+includedir=@includedir@/sawfish/
 
 sawfishhosttype=@host@
 imageloader=@imageloader@
