@@ -78,6 +78,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/sawfish/%{version}/%{_host}
 %{rep_execdir}/sawfish
 %{_infodir}/sawfish*
+%{_includedir}/sawfish/
 
 %changelog
 * Sat Sep 05 2009 Kim B. Heino <b@bbbs.net>
